Change Vote button name to "Button"

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+    <title>Coinqual</title>
+        </head>
+<body>
+<p>Hahahaha so funny</p>
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
@@ -7,5 +13,9 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
-
-
+<p>
+    <a href="http://www.coinqual.com/polls">
+        <img border ="0" alt="polls" src="https://png.icons8.com/metro/50/000000/contacts.png">
+    </a></p>
+</body>
+</html>
