let's upload logo

--- a/polls/templates/polls/main.html
+++ b/polls/templates/polls/main.html
@@ -27,9 +27,15 @@
 
 
     </p>
+<p>
+    <a href="http://www.coinqual.com/" target="_self" class="logo">
+        <img src="./CQ.png">
+    </a></p>
+
     <a href="http://www.coinqual.com/"target="_self"><h1 style="font-family:Verdana;font-size:300%;"><span style="color:#527ecc">C</span>oin<span style="color:#527ecc">Q</span>ual</h1></a>
+
     <a href="http://www.coinqual.com/polls"> <h1> Let's go to our Poll Site !</h1></a>
-    <h5>by Tyler, Ted, Chris, Daniel, Jaehui </h5>
+    <h5>by Tyler, Ted, Chris, Daniel, Jaehui and Tuff </h5>
 
 </header>
 
