Move CoinQualimg from left to center.

--- a/polls/static/coinqualstyle.css
+++ b/polls/static/coinqualstyle.css
@@ -31,3 +31,9 @@ a:active
     background-color: transparent;
     text-decoration: underline}
 
+
+img.logoimg{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+}
