--- a/polls/templates/polls/main.html
+++ b/polls/templates/polls/main.html
@@ -10,7 +10,7 @@
 <header style="text-align:leftr">
 <p>
     <a href="http://www.coinqual.com/" target="_self" class="logo">
-      <TH ALIGN="left"> <img src="{% static 'CQ.png' %}" style="width:250px;height:250px;" alt="CoinQual Logo">
+      <TH ALIGN="left"> <img src="{% static 'CQ.png' %}" style="width:250px;height:250px;" class="logoimg" alt="CoinQual Logo">
     </a>
 </p>
 
