--- a/polls/templates/polls/main.html
+++ b/polls/templates/polls/main.html
@@ -30,10 +30,10 @@
     {% if user.is_authenticated %}
         {{ request.build_absolute_uri }}
              <p class="display-4">Hello, {{ user.username }}</p>
-             <p> <a href="{% url 'logout' %}"> Logout </a></p>
+             <p> <a href="{% url 'polls:logout' %}"> Logout </a></p>
         {% else %}
         {{ request.build_absolute_uri }}
-             <a class="lead" href="{% url 'login' %}">Log in</a>
+             <a class="lead" href="{% url 'polls:login' %}">Log in</a>
         {% endif %}
         <p>{{ request.build_absolute_uri }} <a href = "{% url 'coinbase' %}"> {ip} IP page </a></p>
 {% endblock content %}
