--- a/cquser/templates/cquser/signup.html
+++ b/cquser/templates/cquser/signup.html
@@ -1,4 +1,4 @@
-{% block content %}
+<!DOCTYPE html>
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
@@ -7,13 +7,17 @@
         {{ field.label_tag }}<br>
         {{ field }}
         {% if field.help_text %}
-          <small style="color: grey">{{ field.help_text }}</small>
+          <small style="color: #358035">{{ field.help_text }}</small>
         {% endif %}
         {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
+          <p style="color: #75ff35">{{ error }}</p>
         {% endfor %}
       </p>
     {% endfor %}
     <button type="submit">Sign up</button>
   </form>
-{% endblock %}
+
+
+
+
+
