--- a/polls/templates/polls/main.html
+++ b/polls/templates/polls/main.html
@@ -40,13 +40,12 @@ th,td{
              <p class="display-4">Hello, {{ user.username }}</p>
              <p> <a href="{% url 'cquser:logout' %}"> Logout </a></p>
              <p> <a href="{% url 'cquser:chain' %}"> Transaction Chain Link </a></p>
+             <p> <a href = "{% url 'coinbase' %}"> Get your connection with Coinbase!</a></p>
         {% else %}
         {{ request.build_absolute_uri }}
         <p><a class="lead" href="{% url 'cquser:signup' %}">SignUp</a></p>
             <p><a class="lead" href="{% url 'cquser:login' %}">Log in</a></p>
         {% endif %}
-        <p>{{ request.build_absolute_uri }} <a href = "{% url 'coinbase' %}"> {ip} IP page </a></p>
-
 
 {% if request.build_absolute_uri == "/auth/complete/coinbase/?code=*" %}
 {{ request.build_absolute_uri }}
