--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -4,7 +4,7 @@
 {% extends 'polls/main.html' %}
 
 {% block content1 %}
-    <p>
+    <p>Username: {{user.username}}</p>
     <p><h1>Bitcoin Price : {{ price }}</p></h1>
     <p><h1>CoinBase User ID : {{ user }}</p></h1>
 {% endblock %}
